--- a/style.css
+++ b/style.css
@@ -5,41 +5,76 @@
 :root{
     --blue : #107185;
     --lightb: #66DDF4;
+    --orange: #ff8500;
+    --orangetr: #ff8400bb;
     --white: #f9f9fb;
     --black: #314949;
-    --blacktr: #31494969;
+    --blacktr: #314949b4;
     --opal: #8AB9B5;
-    --bone: #C8C2AE;
+    --white: #ffffff;
+}
+
+body{
+    background-image: url('https://images.unsplash.com/photo-1441984904996-e0b6ba687e04?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80');
 }
 
 .p-navbar{
-background-color: transparent;
+background-color: var(--blacktr);
 transition: all 0.5s;
+backdrop-filter: blur (5px);
 
 }
 
 .p-navbar .nav-link{
-    color: var(--black);
-    transition: all 0.5s;
+    color: var(--orange);
+    transition: all 0.2s;
+    font-weight: 600px;
+    font-size: 20px;
+}
+
+.p-navbar .nav-link:hover{
+    transform: scale(1.1);
+    transition: all 0.3s;
+     
+    
 }
 
 .p-navbar .navbar-brand{
-    color: var(--blue);
+    color: var(--orange);
     transition: all 0.5s;
+    
 }
 
+
 .p-navbar .p-nav-scrolled{
-    background-color: var(--black);
-    
-    }
+    /* background-color: var(--orangetr);  */
+    /* background-color: var(--black); */
+     backdrop-filter: blur(10px); 
+}
     
 .p-navbar .p-nav-scrolled .nav-link{
-    color: var(--bone);
+    color: var(--white);
 }
 
 .p-navbar .p-nav-scrolled .navbar-brand{
-    color: var(--bone);
+    color: var(--white);
     transition: all 0.5s;
 }
 
+.btn-nav{
+    color: var(--white);
+    background-color: var(--orange) ;
+}
+
+#p-nav-btn{
+    transition: all 0.35s;
+}
+
+#p-nav-btn:focus{
+   box-shadow: none;
+}
+
+#p-nav-btn.open{
+    transform: rotate(90deg);
+}
 
