--- a/style.css
+++ b/style.css
@@ -14,9 +14,7 @@
     --white: #ffffff;
 }
 
-body{
-    background-image: url('https://images.unsplash.com/photo-1441984904996-e0b6ba687e04?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80');
-}
+
 
 .p-navbar{
 background-color: var(--blacktr);
@@ -78,3 +76,31 @@ backdrop-filter: blur (5px);
     transform: rotate(90deg);
 }
 
+.masthead {
+    height: 100vh;
+    min-height: 500px;
+    background-image: url('https://images.unsplash.com/photo-1523381210434-271e8be1f52b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    
+    
+  }
+
+
+
+header h1{
+    color:var(--white); 
+}
+
+#btn-cta{
+     font-size: 30px;
+    transition: all 0.5s;
+}
+
+
+#btn-cta:hover{
+ transform: scale(1.1);
+ 
+ 
+}
