--- a/style.css
+++ b/style.css
@@ -3,16 +3,17 @@
 }
 
 :root{
-    --blue : #107185;
+    --blue : #d5e3e6;
     --lightb: #66DDF4;
     --orange: #ff8500;
-    --orangetr: #e0ddd5;
+    --orangetr: #eedaa4;
     
     --white: #f9f9fb;
     --black: #314949;
     --blacktr: #314949b4;
     --opal: #d8e2e1;
     --white: #ffffff;
+
 }
 
 
@@ -109,18 +110,19 @@ color: var(--white);
 
 .p-card{
     border:none;
-    transition: all 0.3s;
-    -webkit-box-shadow: 1px 4px 20px 2px #C4C4C4; 
-    box-shadow: 1px 4px 20px 2px #C4C4C4;   
-     
-    
-    
+    transition: all 0.4s;
+    border-radius: 0.8rem;
+    -webkit-box-shadow: 2px 7px 10px 4px rgba(51,51,51,0.83); 
+    box-shadow: 2px 7px 10px 4px rgba(51,51,51,0.83);   
 }
 
 .p-card:hover{
-    border:none;
+    
     transform:scale(1.1);
-    transition: all 0.3s;
+    transition: all 0.4s;
+    border-radius: 0.8rem;
+    -webkit-box-shadow: 2px 7px 10px 4px rgba(51,51,51,0.83); 
+    box-shadow: 2px 7px 10px 4px rgba(51,51,51,0.83);
     
 }
 
@@ -139,9 +141,39 @@ color: var(--white);
 }
 
 .bg-custom{
-    background-color: var(--orangetr);
+    background-color: var(--opal);
 }
 
 .cat-title{
     color: var(--orange);
+}
+
+.card-btn-like .btn-like{
+    border-radius: 0.8rem;
+    background-color: var(--orange);
+    position: absolute;
+    top:10px;
+    right:10px;
+    opacity:0;
+    transition: all 0.4s;
+    color: var(--white);
+}
+
+.card-btn-like .btn-like.active{
+    opacity:1;
+}
+.card-btn-like:hover .btn-like{
+    opacity:1;  
+}
+
+.carous-card{
+    border-radius: 0.8rem;
+}
+
+.carous-card-top{
+    border-top-right-radius: 0.8rem;
+}
+
+.btn-like:hover{
+    background-color: var(--orangetr);
 }
